# open-cl

./: CMakeLists.txt  README.md  main.cpp
